# Legal-Reasoning

./: .gitignore
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatWindow.tsx  Header.tsx  MessageInput.tsx  Sidebar.tsx
nyayasahayak_backend/: README.md  SETUP_GUIDE.md  pyproject.toml  test_api.py
nyayasahayak_backend/app/: main.py
nyayasahayak_backend/app/modules/: data_loader.py  embeddings.py  langgraph_workflow.py  rag_agent.py  retriever.py  utils.py
